--- a/tools/custom-organization-policy-library/test/test_cases/storage/bucket.yaml
+++ b/tools/custom-organization-policy-library/test/test_cases/storage/bucket.yaml
@@ -1,16 +1,14 @@
+# setup:
+#   - command:  gcloud storage buckets create {{ identifier }} 
+#     teardown_command: gcloud storage buckets delete  {{ identifier }}
+#     flags: 
+#       uniform-bucket-level-access: ""
+#       location: asia-southeast1
 storage_bucket_uniform_bucket_level_access:
   steps:
-  - command: gcloud storage buckets create gs://{{ prefix }}-bucket --uniform-bucket-level-access --location=asia-southeast1
-    exitcode: 0
-    teardown: gcloud storage buckets delete  gs://{{ prefix }}-bucket
-  tags:
+  - identifier: gs://{{ prefix }}-bucket
+    command: gcloud storage buckets create {{ identifier }} --uniform-bucket-level-access --location=asia-southeast1
+    expected_return_code: 0
+    teardown_command: gcloud storage buckets delete  {{ identifier }}
+  markers:
     - storage
-
-# storage_bucket_no_uniform_bucket_level_access:
-#   steps:
-#   - command: gcloud storage buckets create gs://{{ prefix }}-bucket-no-uniform-bucket-level-access --no-uniform-bucket-level-access --location=asia-southeast1
-#     exitcode: 1
-#     stderr: "(gcloud.storage.buckets.create) HTTPError 412: Request violates constraint 'constraints/storage.uniformBucketLevelAccess'"
-#     teardown: gcloud storage buckets delete  gs://{{ prefix }}-bucket-no-uniform-bucket-level-access
-#   tags:
-#     - storage
