--- a/tools/custom-organization-policy-library/test/test_cases/storage/bucket.yaml
+++ b/tools/custom-organization-policy-library/test/test_cases/storage/bucket.yaml
@@ -1,14 +1,24 @@
-# setup:
-#   - command:  gcloud storage buckets create {{ identifier }} 
-#     teardown_command: gcloud storage buckets delete  {{ identifier }}
-#     flags: 
-#       uniform-bucket-level-access: ""
-#       location: asia-southeast1
+shared_config:
+  command:  gcloud storage buckets create gs://{{ identifier }} 
+  teardown_command: gcloud storage buckets delete  gs://{{ identifier }}
+  default_command_flags: 
+    location: asia-southeast1
+    uniform-bucket-level-access: true
+
 storage_bucket_uniform_bucket_level_access:
   steps:
-  - identifier: gs://{{ prefix }}-bucket
-    command: gcloud storage buckets create {{ identifier }} --uniform-bucket-level-access --location=asia-southeast1
-    expected_return_code: 0
-    teardown_command: gcloud storage buckets delete  {{ identifier }}
+  - expected_result:
+      return_code: 0
+  markers:
+    - storage
+
+storage_bucket_no_uniform_bucket_level_access:
+  steps:
+  - command_flags:
+      uniform-bucket-level-access: false
+      location: asia-southeast2
+    expected_result:
+      return_code: 1
+      stderr: 'constraints/storage.uniformBucketLevelAccess'
   markers:
     - storage
