--- a/tools/custom-organization-policy-library/test/test_cases/storage/bucket.yaml
+++ b/tools/custom-organization-policy-library/test/test_cases/storage/bucket.yaml
@@ -4,13 +4,13 @@ shared_config:
   default_command_flags: 
     location: asia-southeast1
     uniform-bucket-level-access: true
+  default_markers:
+    - storage
 
 storage_bucket_uniform_bucket_level_access:
   steps:
   - expected_result:
       return_code: 0
-  markers:
-    - storage
 
 storage_bucket_no_uniform_bucket_level_access:
   steps:
@@ -20,5 +20,3 @@ storage_bucket_no_uniform_bucket_level_access:
     expected_result:
       return_code: 1
       stderr: 'constraints/storage.uniformBucketLevelAccess'
-  markers:
-    - storage
