--- a/tools/custom-organization-policy-library/test/test_cases/cloudsql/mysql.yaml
+++ b/tools/custom-organization-policy-library/test/test_cases/cloudsql/mysql.yaml
@@ -16,6 +16,7 @@ shared_config:
     database-flags: skip_show_database=on,local_infile=off
     enable-bin-log : true
     enable-password-policy: true
+    insights-config-query-insights-enabled: true
   default_markers:
     - cloudsql
     - mysql
@@ -28,7 +29,7 @@ cloudsql_mysql_instance_allowed:
 cloudsql_mysql_instance_no_ssl_mode_encrypted:
   steps:
   - command_flags:
-      ssl-mode: absent  # Special keywords meaning the flags has to be removed
+      ssl-mode: absent
     expected_result:
       return_code: 1
       stderr: "customConstraints/custom.cloudsqlRequireSSLConnection"
@@ -50,6 +51,22 @@ cloudsql_mysql_instance_no_backup:
     expected_result:
       return_code: 1
       stderr: "customConstraints/custom.cloudsqlRequireAutomatedBackup"
+
+cloudsql_mysql_instance_external_ip:
+  steps:
+  - command_flags:
+      assign-ip: true
+    expected_result:
+      return_code: 1
+      stderr: "customConstraints/custom.cloudsqlDisableExternalIP"
+
+cloudsql_mysql_instance_no_query_insights:
+  steps:
+  - command_flags:
+      insights-config-query-insights-enabled: false
+    expected_result:
+      return_code: 1
+      stderr: "customConstraints/custom.cloudsqlRequireQueryInsights"
 
 cloudsql_mysql_instance_no_skip_show_database_on_flag:
   steps:
