--- a/tools/custom-organization-policy-library/test/test_cases/cloudsql/postgresql.yaml
+++ b/tools/custom-organization-policy-library/test/test_cases/cloudsql/postgresql.yaml
@@ -16,16 +16,15 @@ shared_config:
     database-flags: log_connections=on,log_disconnections=on,log_min_messages=warning,log_min_error_statement=error,log_min_duration_statement=-1,cloudsql.enable_pgaudit=on,log_error_verbosity=default,log_statement=ddl
     enable-point-in-time-recovery: true
     enable-password-policy: true
+    insights-config-query-insights-enabled: true
   default_markers:
     - cloudsql
     - postgresql
 
 cloudsql_postgresql_instance_allowed:
   steps:
-  - identifier: "{{ prefix }}-cloudsql-postgresql-allowed"
-    command: >- 
-      --database-flags=log_connections=on,log_disconnections=on,log_min_messages=warning,log_min_error_statement=error,log_min_duration_statement=-1,cloudsql.enable_pgaudit=on,log_error_verbosity=default,log_statement=ddl
-    expected_return_code: 0
+  - expected_result:
+      return_code: 0
 
 cloudsql_postgresql_instance_no_ssl_mode_encrypted:
   steps:
@@ -52,6 +51,22 @@ cloudsql_postgresql_instance_no_backup:
     expected_result:
       return_code: 1
       stderr: "customConstraints/custom.cloudsqlRequireAutomatedBackup"
+
+cloudsql_postgresql_instance_external_ip:
+  steps:
+  - command_flags:
+      assign-ip: true
+    expected_result:
+      return_code: 1
+      stderr: "customConstraints/custom.cloudsqlDisableExternalIP"
+
+cloudsql_postgresql_instance_no_query_insights:
+  steps:
+  - command_flags:
+      insights-config-query-insights-enabled: false
+    expected_result:
+      return_code: 1
+      stderr: "customConstraints/custom.cloudsqlRequireQueryInsights"
 
 cloudsql_postgresql_instance_no_log_connections_on_flag:
   steps:
