--- a/tools/custom-organization-policy-library/test/test_cases/cloudsql/sqlserver.yaml
+++ b/tools/custom-organization-policy-library/test/test_cases/cloudsql/sqlserver.yaml
@@ -17,6 +17,7 @@ shared_config:
     database-flags: '"external scripts enabled"=off,"cross db ownership chaining"=off,"user connections"=0,"user options"=0,"remote access"=off,"3625"=on,"contained database authentication"=off'
     enable-point-in-time-recovery: true
     enable-password-policy: true
+    insights-config-query-insights-enabled: true
   default_markers:
     - cloudsql
     - sqlserver
@@ -58,6 +59,22 @@ cloudsql_sqlserver_instance_no_backup:
     expected_result:
       return_code: 1
       stderr: "customConstraints/custom.cloudsqlRequireAutomatedBackup"
+
+cloudsql_sqlserver_instance_external_ip:
+  steps:
+  - command_flags:
+      assign-ip: true
+    expected_result:
+      return_code: 1
+      stderr: "customConstraints/custom.cloudsqlDisableExternalIP"
+
+cloudsql_sqlserver_instance_no_query_insights:
+  steps:
+  - command_flags:
+      insights-config-query-insights-enabled: false
+    expected_result:
+      return_code: 1
+      stderr: "customConstraints/custom.cloudsqlRequireQueryInsights"
 
 cloudsql_sqlserver_instance_external_scripts_enabled_on:
   steps:
